# skia-buildbot

./: .bazelrc  .golangci.yml  .mockery.yaml  DEPS  MODULE.bazel  README.md  cipd.ensure  go.mod  go.sum  launch.md  package-lock.json  package.json  pnpm-lock.yaml
am/: BUILD.bazel
api/: BUILD.bazel
attest/: BUILD.bazel
autoroll/: BUILD.bazel  autoroll-be.lock.json  autoroll-be.yaml
autoroll/go/autoroll-config-generator/: main.go
autoroll/go/commit_msg/: canary.go  commit_msg_test.go  default.go
autoroll/go/config/: config.pb.go  config.proto
autoroll/go/config/deepvalidation/: deepvalidation.go  deepvalidation_test.go
autoroll/go/repo_manager/: android_repo_manager.go  deps_repo_manager_test.go  parent_child_repo_manager.go
autoroll/go/repo_manager/child/: git_semver.go  git_semver_test.go
autoroll/go/repo_manager/common/version_file_common/: BUILD.bazel  version_file_common.go  version_file_common_test.go
autoroll/go/repo_manager/parent/: BUILD.bazel  deps_local.go  git_checkout.go
autoroll/go/revision/: revision.go  revision_test.go
autoroll/modules/arb-status-sk/: arb-status-sk.ts
autoroll/modules/config/: config.ts
bazel/: owners_layers.bzl  skia_app_container.bzl
bugs-central/: BUILD.bazel
cabe/: BUILD.bazel
cd/: BUILD.bazel  cd.lock.json  cd.yaml
cd/go/toggle-freeze/: main.go  main_test.go
cdn/: BUILD.bazel
cdn/go/cdn/: BUILD.bazel  main.go
cherrypick-watcher/: BUILD.bazel
cmd/autoreview/: BUILD.bazel  README.md  config.go  config_test.go  gemini.go  gemini_test.go  git.go  main.go  parser.go  parser_test.go  prompts.go  prompts_test.go
cmd/autoreview/mcp/: BUILD.bazel  main.go  run.sh
cmd/presubmit/: presubmit.go  presubmit_test.go
codesize/: BUILD.bazel
cq_watcher/: BUILD.bazel
datahopper/: BUILD.bazel
docsyserver/: docsyserver.lock.json  docsyserver.yaml
ds/: BUILD.bazel
elements-sk/modules/checkbox-sk/: BUILD.bazel  checkbox-sk.ts  checkbox-sk_test.ts
elements-sk/modules/multi-select-sk/: BUILD.bazel  multi-select-sk.ts  multi-select-sk_test.ts
elements-sk/modules/radio-sk/: radio-sk.ts  radio-sk_test.ts
elements-sk/modules/select-sk/: BUILD.bazel  select-sk.ts  select-sk_test.ts
elements-sk/modules/spinner-sk/: spinner-sk.scss
elements-sk/modules/tabs-sk/: BUILD.bazel  tabs-sk.ts  tabs-sk_test.ts
fiddlek/: BUILD.bazel  fiddler-base.lock.json  fiddler-base.yaml  test-fiddle-final.sh
fiddlek/cpp/: fiddle_secwrap.cpp
fiddlek/go/fiddle_secwrap/: BUILD.bazel  main.go  main_test.go
fiddlek/go/fiddler/: BUILD.bazel  main.go
fiddlek/go/fiddler/e2e_test/: BUILD.bazel  e2e_test_wrapper.sh  main.go
fiddlek/go/fiddler/e2e_test/skia_mock/: VERSION  build.ninja  main.cpp
fiddlek/go/fiddler/e2e_test/test_cases/: fail_execve.cpp  fail_readlink.cpp  fail_symlink.cpp  success.cpp
gitsync/: BUILD.bazel
go/cipd/: asset_versions_gen.go
go/coverage/: BUILD.bazel
go/depot_tools/deps_parser/: deps_parser.go  deps_parser_test.go
go/du/: BUILD.bazel  du.go
go/gitauth/: gitauth.go
go/login/: login.go  login_test.go
go/luciconfig/: apiclient.go
go/query/: query.go  query_test.go
go/semver/: semver.go
go/sklog/structuredlogging/: BUILD.bazel  structuredlogging.go  structuredlogging_test.go
go/sklog/structuredlogging/mocks/: BUILD.bazel  CloudLogger.go
go/sser/example/: BUILD.bazel
golden/: BUILD.bazel
golden/modules/pagination-sk/: BUILD.bazel  pagination-sk.ts  pagination-sk_test.ts
helloworld/: BUILD.bazel
infra-sk/modules/: BUILD.bazel  stateReflector.ts  stateReflector_test.ts
infra-sk/modules/alogin-sk/: alogin-sk.ts  alogin-sk_test.ts
infra-sk/modules/paramset-sk/: BUILD.bazel  paramset-sk.ts  paramset-sk_po.ts  (+2 more)
infra-sk/modules/url/: BUILD.bazel  index.ts  url_test.ts
infra/bots/: tasks.json
jsdoc/: BUILD.bazel
jsfiddle/: BUILD.bazel
k8s-checker/: BUILD.bazel
kube/: BUILD.bazel  Makefile
kube/base-cipd/: BUILD.bazel  base-cipd.lock.json  base-cipd.yaml
kube/basealpine/: BUILD.bazel  basealpine.lock.json  basealpine.yaml
leasing/: BUILD.bazel
machine/: BUILD.bazel
mcp/services/skia/format/: BUILD.bazel  format.go
mcp/services/skia/task_details/: BUILD.bazel  client.go  client_test.go  tools.go
perf/: .gitignore  BUILD.bazel  Makefile  gen_version_test.sh  multigraph-guide.md
perf/configs/: demo_spanner.json
perf/coverage/: README.md  fault_inject.py  fault_inject_test.py
perf/docs/: ai_generated_doc.md
perf/go/regression/continuous/backfill/: BUILD.bazel  README.md  anomaly_backfill.go  anomaly_backfill_test.go  trigger_backfill.sh
perf/go/regrshortcut/regrshortcutstore/: BUILD.bazel  cacheregrshortcutstore.go  store.go  store_test.go
perf/go/regrshortcut/regrshortcutstore/schema/: BUILD.bazel  schema.go
perf/modules/explore-multi-v2-sk/wasm/: BUILD.bazel  filter.ts
perf/pages/: BUILD.bazel  multiexplore-v2.html  multiexplore-v2.ts
perf/scripts/: BUILD.bazel  README.md  multigraph_monkey_test.js  run_monkey_test.js
periodic-trigger/: BUILD.bazel
pinpoint/: BUILD.bazel  README.md
pinpoint/go/pinpoint/: BUILD.bazel  pinpoint.go  types.go
pinpoint/go/pinpoint/internal/: BUILD.bazel  legacy_client.go  legacy_client_test.go  types.go
proberk/: BUILD.bazel
promk/: BUILD.bazel
rag/: BUILD.bazel  Makefile  README.md
rag/configs/: chrome-internal-staging.json  chrome-internal.json
rag/go/ingest/history/: BUILD.bazel  loader.go
sa-keys-checker/: BUILD.bazel
scrap/: BUILD.bazel
shaders/: BUILD.bazel
sk/go/agent/: BUILD.bazel  agent.go
sk/go/agent/tool/: BUILD.bazel  mcp.go  tool.go
sk/go/agent/workflow/: BUILD.bazel  workflow.go
sk/go/agent/workflow/docs/: index.md  task_drilldown.md  task_failure_analysis.md
skcq/: BUILD.bazel
skfe/: skia.org.zone
skottie/: BUILD.bazel  README.md
static_server/: BUILD.bazel
status/: BUILD.bazel
task_driver/: BUILD.bazel
task_driver/go/logs/: BUILD.bazel  logs.go  logs_test.go
task_scheduler/: BUILD.bazel  task-scheduler-jc.lock.json  task-scheduler-jc.yaml
test-service/: BUILD.bazel
tree_status/: BUILD.bazel
trybot_updater/: BUILD.bazel
(+392 files in other folders)
