load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "autoroll_google3_container",
    base_image = "//kube/basealpine:basealpine",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-google3:autoroll-google3",
                "0755",
            ],
        ],
    },
    empty_dirs = {"/mnt/pd0/autoroll_workdir": "0777"},
    repository = "skia-public/autoroll-google3",
)

pkg_tar(
    name = "autoroll_be_cc_symlink",
    symlinks = {
        "/usr/bin/cc": "/usr/bin/gcc",
    },
)

pkg_tar(
    name = "autoroll_be_gcloud_sdk",
    srcs = ["@gcloud_linux//:all_files"],
    # It seems like we should be able to use:
    #
    #     strip_prefix = "external/+_repo_rules+gcloud_linux/google-cloud-sdk/",
    #     package_dir = "etc/gcloud/",
    #
    # But strip_prefix doesn't seem to work in this case. Therefore, we use
    # remap_paths in combination with strip_prefix (to preserve the directory
    # structure), which does work.
    remap_paths = {"external/+_repo_rules+gcloud_linux/google-cloud-sdk/": "etc/gcloud/"},
    strip_prefix = ".",  # Preserve the folder structure.
)

skia_app_container(
    name = "autoroll_be_container",
    base_image = "//kube/base-cipd:base-cipd",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-be:autoroll-be",
                "0755",
            ],
            [
                "@bazelisk//file",
                "0755",
            ],
        ],
    },
    env = {
        "PATH": "/go/bin:/etc/gcloud/bin:${PATH}",
    },
    extra_tars = [
        "@autoroll-be-apt-install//:flat",
        "//bazel/go:go_toolchain_tar",
        ":autoroll_be_cc_symlink",
        ":autoroll_be_gcloud_sdk",
    ],
    repository = "skia-public/autoroll-be",
)

skia_app_container(
    name = "autoroll_fe_container",
    base_image = "//kube/basealpine:basealpine",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-fe:autoroll-fe",
                "0755",
            ],
        ],
        "/usr/local/share/autoroll-fe/dist/img": [
            [
                "//autoroll/images:%s" % favicon,
                "0644",
            ]
            for favicon in [
                "favicon-failure.svg",
                "favicon-stopped.svg",
                "favicon-success.svg",
                "favicon-unknown.svg",
            ]
        ],
        "/usr/local/share/autoroll-fe/dist": [
            [
                "//autoroll/pages:production/%s.%s" % (page, ext),
                "0644",
            ]
            for page in [
                "index",
                "config",
                "roller",
                "mode-history",
                "roll-history",
                "strategy-history",
            ]
            for ext in [
                "css",
                "html",
                "js",
            ]
        ],
    },
    repository = "skia-public/autoroll-fe",
)
