load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "cdn_container",
    base_image = "@basealpine",
    dirs = {
        "/usr/local/bin": [
            [
                "//cdn/go/cdn:cdn",
                "0755",
            ],
        ],
    },
    repository = "skia-public/cdn",
)
