load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "scrapexchange_container",
    base_image = "//kube/basealpine:basealpine",
    dirs = {
        "/usr/local/bin": [
            [
                "//scrap/go/scrapexchange:scrapexchange",
                "0755",
            ],
        ],
        "/usr/local/share/scrapexchange/dist": [
            [
                "//scrap/pages:production/index.%s" % ext,
                "0644",
            ]
            for ext in [
                "css",
                "html",
                "js",
            ]
        ],
    },
    entrypoint = "/usr/local/bin/scrapexchange",
    repository = "skia-public/scrapexchange",
)
