load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "test_service_container",
    base_image = "//kube/basealpine:basealpine",
    dirs = {
        "/usr/local/bin": [
            [
                "//test-service/go/test-service:test-service",
                "0755",
            ],
        ],
    },
    repository = "skia-public/test-service",
)
