load("//infra-sk:index.bzl", "karma_test", "ts_library")

ts_library(
    name = "index_ts_lib",
    srcs = ["index.ts"],
    visibility = ["//visibility:public"],
)

karma_test(
    name = "url_test",
    src = "url_test.ts",
    deps = [
        ":index_ts_lib",
        "//:node_modules/@types/chai",
        "//:node_modules/chai",
    ],
)
