load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pinpoint",
    srcs = [
        "pinpoint.go",
        "types.go",
    ],
    importpath = "go.skia.org/infra/pinpoint/go/pinpoint",
    visibility = ["//visibility:public"],
    deps = [
        "//go/skerr",
        "//pinpoint/go/pinpoint/internal",
    ],
)
