load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "agent",
    srcs = ["agent.go"],
    importpath = "go.skia.org/infra/sk/go/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//sk/go/agent/tool",
        "//sk/go/agent/workflow",
        "@com_github_urfave_cli_v2//:cli",
    ],
)
