load("@rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "logs",
    srcs = ["logs.go"],
    importpath = "go.skia.org/infra/task_driver/go/logs",
    visibility = ["//visibility:public"],
    deps = [
        "//go/skerr",
        "//go/sklog",
        "//go/util",
        "//task_driver/go/td",
        "@com_google_cloud_go_bigtable//:bigtable",
        "@io_opencensus_go//trace",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "logs_test",
    srcs = ["logs_test.go"],
    embed = [":logs"],
    deps = [
        "//go/bt/testutil",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//require",
    ],
)
