load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["CloudLogger.go"],
    importpath = "go.skia.org/infra/go/sklog/structuredlogging/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//mock",
        "@com_google_cloud_go_logging//:logging",
    ],
)
