load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "format",
    srcs = ["format.go"],
    importpath = "go.skia.org/infra/mcp/services/skia/format",
    visibility = ["//visibility:public"],
    deps = [
        "//go/skerr",
        "//mcp/common",
        "@com_github_mark3labs_mcp_go//mcp",
    ],
)
