load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "task_details",
    srcs = [
        "client.go",
        "tools.go",
    ],
    importpath = "go.skia.org/infra/mcp/services/skia/task_details",
    visibility = ["//visibility:public"],
    deps = [
        "//go/auth",
        "//go/httputils",
        "//go/skerr",
        "//go/swarming",
        "//mcp/common",
        "//task_driver/go/db",
        "//task_driver/go/db/bigtable",
        "//task_driver/go/logs",
        "//task_scheduler/go/db",
        "//task_scheduler/go/db/firestore",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_google_cloud_go_bigtable//:bigtable",
        "@com_google_cloud_go_datastore//:datastore",
        "@org_chromium_go_luci//grpc/prpc",
        "@org_chromium_go_luci//logdog/client/coordinator",
        "@org_chromium_go_luci//logdog/common/fetcher",
        "@org_chromium_go_luci//logdog/common/types",
        "@org_chromium_go_luci//luciexe/legacy/annotee/proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_oauth2//google",
    ],
)
