load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "regrshortcutstore",
    srcs = ["store.go"],
    importpath = "go.skia.org/infra/perf/go/regrshortcut/regrshortcutstore",
    visibility = ["//visibility:public"],
    deps = [
        "//go/skerr",
        "//go/sql/pool",
        "//perf/go/types",
    ],
)
