load("@rules_go//go:def.bzl", "go_library")
load("//bazel/go:go_test.bzl", "go_test")

go_library(
    name = "history",
    srcs = [
        "ingester.go",
        "loader.go",
    ],
    importpath = "go.skia.org/infra/rag/go/ingest/history",
    visibility = ["//visibility:public"],
    deps = [
        "//go/httputils",
        "//go/metrics2",
        "//go/skerr",
        "//go/sklog",
        "//go/util",
        "//rag/go/filereaders/npy",
        "//rag/go/filereaders/pickle",
        "//rag/go/filereaders/zip",
        "//rag/go/topicstore",
        "@com_google_cloud_go_storage//:storage",
        "@io_opencensus_go//trace",
        "@org_golang_google_api//iterator",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//google",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "history_test",
    srcs = ["ingester_test.go"],
    embed = [":history"],
    deps = [
        "//rag/go/filereaders/pickle",
        "//rag/go/topicstore",
        "//rag/go/topicstore/mocks",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
