load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tool",
    srcs = [
        "mcp.go",
        "tool.go",
    ],
    importpath = "go.skia.org/infra/sk/go/agent/tool",
    visibility = ["//visibility:public"],
    deps = [
        "//go/auth",
        "//go/httputils",
        "//go/skerr",
        "//go/util",
        "@com_github_mark3labs_mcp_go//client",
        "@com_github_mark3labs_mcp_go//client/transport",
        "@com_github_mark3labs_mcp_go//mcp",
        "@com_github_urfave_cli_v2//:cli",
        "@org_golang_x_oauth2//google",
    ],
)
