load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "workflow",
    srcs = ["workflow.go"],
    embedsrcs = [
        "docs/index.md",
        "docs/task_failure_analysis.md",
    ],
    importpath = "go.skia.org/infra/sk/go/agent/workflow",
    visibility = ["//visibility:public"],
    deps = ["@com_github_urfave_cli_v2//:cli"],
)
